@@ -1,4 +1,4 @@
-/*	$OpenBSD: channels.h,v 1.76 2005/03/01 10:09:52 djm Exp $	*/
+/*	$OpenBSD: channels.h,v 1.77 2005/06/16 03:38:36 djm Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -216,7 +216,8 @@ int	 channel_cancel_rport_listener(const char *, u_short);
 int	 x11_connect_display(void);
 int	 x11_create_display_inet(int, int, int, u_int *);
 void     x11_input_open(int, u_int32_t, void *);
-void	 x11_request_forwarding_with_spoofing(int, const char *, const char *);
+void	 x11_request_forwarding_with_spoofing(int, const char *, const char *,
+	    const char *);
 void	 deny_input_open(int, u_int32_t, void *);
 
 /* agent forwarding */
